@@ -1,3 +1,12 @@
+2007-05-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder
+	-aclsForUser:uid]): overriden method.
+	([SOGoMailFolder -removeAclsForUsers:users]): overriden method.
+	([SOGoMailFolder -setRoles:rolesforUser:uid]): overriden method.
+	([SOGoMailFolder -defaultUserID]): overriden method.
+	([SOGoMailFolder -hasSupportForDefaultRoles]): overriden method.
+
 2007-05-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder
